<?xml version="1.0"?>

<package>

 <name>despacito</name>

 <version>0.0.0</version>

 <description>The despacito package</description> 

 <maintainer email="aaiyushk@iitk.ac.in">aaiyush</maintainer>  

 <license>TODO</license>  

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>cv_bridge</build_depend>

 <build_depend>image_transport</build_depend>

 <build_depend>dynamic_reconfigure</build_depend>

 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>

 <run_depend>std_msgs</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>cv_bridge</run_depend>

 <run_depend>image_transport</run_depend>

 <run_depend>roscpp</run_depend>

 <run_depend>dynamic_reconfigure</run_depend> 

 

</package>
